# modu

.github/workflows/: deploy.yml  rust.yml
extensions/vscode/: modu-lang-1.0.0.vsix  modu-lang-1.1.0.vsix  modu-lang-1.1.1.vsix  modu-lang-1.2.0.vsix  modu-lang-1.2.1.vsix  package-lock.json  package.json
extensions/vscode/syntaxes/: modu.tmLanguage.json
ffi/: modu_ffi.h
ffi/rust_ffi/: Cargo.toml
ffi/rust_ffi/src/: lib.rs
lang/: Cargo.toml
lang/examples/: advanced_math.modu  array.modu  crypto.modu  http.modu  if_statements.modu  loops.modu  math.modu  nesting_many_funcs.modu  test.modu  time.modu  turing_machine.modu  uuid.modu
lang/examples/ffi/: main.modu
lang/examples/ffi/ffi_test/: Cargo.toml
lang/examples/ffi/ffi_test/src/: lib.rs
lang/examples/using_packages/: project.toml
lang/src/: ast.rs  eval.rs  evaulator.rs  internal.rs  lexer.rs  lib.rs  main.rs  parser.rs  utils.rs
lang/src/builtins/: array.rs  misc.rs  mod.rs  object.rs
lang/src/cli/: install.rs  login.rs  repl.rs  run.rs  server.rs
lang/src/functions/: array.rs  misc.rs  mod.rs  type_conversion.rs
lang/src/libraries/: crypto.rs  encoding.rs  ffi.rs  http.rs  math.rs  mod.rs  os.rs  time.rs
lang/tests/: integration_tests.rs
lang/tests/cases/: crypto.expected  crypto.modu  encoding.expected  encoding.modu  loops.expected  loops.modu  minskys_machine.expected  minskys_machine.modu  nesting_funcs.expected  nesting_funcs.modu
modu-wasm/: .gitignore  Cargo.toml
modu-wasm/src/: lib.rs
web/: package-lock.json  package.json  tailwind.config.ts
web/src/: app.css
web/src/lib/: navbar.svelte
web/src/lib/docs/: cryptography.md  data.ts  encoding.md  ffi.md  http.md  libraries.md  loops.md  math.md
web/src/lib/modu/: modu_wasm.d.ts  modu_wasm.js  modu_wasm_bg.wasm  modu_wasm_bg.wasm.d.ts  package.json
web/src/routes/: +page.svelte
web/src/routes/docs/: +page.svelte
web/src/routes/docs/[...slug]/: +page.svelte
web/src/routes/ide/: +page.svelte
