[package]
name = "modu"
version = "1.3.0"
edition = "2024"
repository = "https://github.com/cyteon/modu"
homepage = "https://modu.cyteon.dev"
description = "A fast and simple interpreted language"
documentation = "https://modu.cyteon.dev/docs/quickstart"
license = "MIT"
authors = ["cyteon"]
keywords = ["programming-language", "cli", "interpreter", "language"]
exclude = ["/examples", "/tmp", "/tests"]

[dependencies]
bat = "0.26.1"
chrono = "0.4.39"
libloading = "0.9.0"
logos = "0.16.0"
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
rouille = "3.6.2"
serde_json = "1.0.134"
toml = "0.9.11"
zip = "7.2.0"
openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.13.1", features = ["v4", "v7"]}
serde = { version = "1.0.228", features = ["derive"] }
modu_ffi = "1.0.1"
base64 = "0.22.1"
sha2 = "0.10.9"
blake3 = "1.8.3"
bcrypt = "0.18.0"
argon2 = "0.5.3"
scrypt = "0.11.0"
base16 = "0.2.1"
md5 = "0.8.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
