[package]
name = "modu"
version = "2.2.0"
edition = "2024"
repository = "https://github.com/cyteon/modu"
homepage = "https://modu.cyteon.dev"
description = "A fast and simple turning-complete interpreted language"
documentation = "https://modu.cyteon.dev/docs/quickstart"
license = "MIT"
authors = ["cyteon"]
keywords = ["programming-language", "cli", "interpreter", "language"]
exclude = ["/examples", "/tmp", "/tests"]

[lib]
name = "modu"
path = "src/lib.rs"

[[bin]]
name = "modu"
path = "src/main.rs"

[dependencies]
chrono = "0.4.39"
logos = "0.16.1"
rand = "0.8.5"
serde_json = "1.0.134"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
modu_ffi = "1.1.2"
base64 = "0.22.1"
sha2 = "0.10.9"
blake3 = "1.8.3"
bcrypt = "0.18.0"
argon2 = "0.5.3"
scrypt = "0.11.0"
base16 = "0.2.1"
md5 = "0.8.0"
chumsky = "0.12.0"
ariadne = "0.6.0"
colored = "3.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom_v2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.20.0", features = ["v4", "v7", "js"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gag = "1.0.0"
uuid = { version = "1.20.0", features = ["v4", "v7"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"]}
rouille = { version = "3.6.2" }
libloading = { version = "0.9.0" }
zip = { version = "7.2.0" }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
